perf: 添加歌曲文件音源选择接口